<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Fragment.BannerFragment">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_choose_image"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/choose_bg_shape"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/choose_file"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_medium"
        android:layout_toEndOf="@+id/button_choose_image"
        android:hint="@string/enter_file_name"
        android:paddingStart="8dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/progress_bar"
        android:layout_below="@id/edit_text_file_name"
        android:layout_marginTop="16dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:layout_above="@+id/button_upload"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_upload"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/choose_bg_shape"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/upload"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp" />


</RelativeLayout>